k8s_quiz_api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-api
  template:
    metadata:
      labels:
        app: quiz-api
    spec:
      containers:
        - name: quiz-api
          image: richardioi/quiz-api:latest   
          imagePullPolicy: Always
