k8s_quiz_ui_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-app
      tier : quiz-ui
      track: stable
  template:
    metadata:
      labels:
        app: quiz-app
        tier : quiz-ui
        track: stable
    spec:
      containers:
      - name: quiz-ui
        image: richardioi/quiz-ui:latest
        imagePullPolicy: Always
