k8s_mail_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-api-service
spec:
  ports:
    - name: http
      targetPort: 5000 # This is the port exposed by the container
      port: 5000 # This is the port exposed by the service
  selector:
    app: mail-api
