k8s_quiz_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-api-service
spec:
  ports:
    - name: http
      targetPort: 5000 # This is the port exposed by the container
      port: 8080 # This is the port exposed by the service
  #type: ClusterIP
  selector:
    app: quiz-api
