k8s_quiz_ui_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-ui-service
spec:
  ports:
    - name: http
      targetPort: 8080 # This is the port exposed by the container
      port: 8080 # This is the port exposed by the service
  selector:
    app: quiz-ui
