front-end-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-quiz-app
spec:
  rules:
  - host: "front-end.localhost"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: quiz-ui-service
            port:
              number: 8080
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: quiz-api-service
            port:
              number: 8080
